--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +35,7 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
   http: ^0.13.3
+  date_format:
 
 dev_dependencies:
   flutter_test:
