--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
   http: ^0.13.3
+  like_button: ^2.0.3
   date_format:
+  
 
 dev_dependencies:
   flutter_test:
