--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^0.13.3
   like_button: ^2.0.3
   date_format:
+  carousel_slider: ^4.0.0
+  cached_network_image: ^3.1.0
+  video_player: ^2.2.5
   
 
 dev_dependencies:
