--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.0.0
   cached_network_image: ^3.1.0
   video_player: ^2.2.5
+  youtube_player_flutter: ^8.0.0
   
 
 dev_dependencies:
